feat: Add Apple Podcasts-style dynamic color palette backgrounds
✨ Features:
- Dynamic color extraction from podcast artwork using Android Palette API
- Extended colored backgrounds that flow beyond card boundaries
- Play and options buttons positioned on colored palette backgrounds
- Rounded corners for podcast artwork (8dp radius)
- Immersive horizontal scrolling for card lists
- Diverse fallback color system for consistent variety

🎨 UI/UX Improvements:
- Larger podcast cards with better proportions
- Play buttons with gray translucent pill backgrounds
- Horizontal three-dot options buttons (transparent background)
- Perfect image fitting within frames using fitCenter scaling
- Enhanced visual hierarchy with colored palette integration

🔧 Technical Implementation:
- New PaletteTransformation class for Glide color extraction
- ColorUtils utility with intelligent color selection algorithms
- Extended palette backgrounds (30%+ beyond card boundaries)
- Improved fallback color diversity using sophisticated hashing
- Added Palette library dependency to ui/common module

📚 Documentation:
- Comprehensive cursor rules documentation (248 lines)
- Detailed build process and testing guidelines
- UI/UX development best practices
- Color and palette management guidelines
- Code quality standards and common pitfalls

🏗️ Build & Testing:
- All changes verified with ./gradlew assembleDebug
- Proper error handling for palette extraction failures
- Consistent resource management across modules
- Performance optimizations for color extraction

Files changed:
- Enhanced podcast card layouts (popular, horizontal, subscription grid)
- Updated adapters with color extraction logic
- New drawable resources for rounded corners and button backgrounds
- Improved home fragment layout for immersive scrolling
- Added comprehensive development documentation

--- a/ui/common/build.gradle
+++ b/ui/common/build.gradle
@@ -20,6 +20,7 @@ dependencies {
     implementation "androidx.viewpager2:viewpager2:$viewPager2Version"
     implementation "com.google.android.material:material:$googleMaterialVersion"
     implementation "androidx.core:core-splashscreen:1.0.0"
+    implementation "androidx.palette:palette:$paletteVersion"
     implementation "org.apache.commons:commons-lang3:$commonslangVersion"
     implementation "commons-io:commons-io:$commonsioVersion"
 
